--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Gradle Package
+name: Gradle Build
 
 on:
   release:
@@ -27,10 +27,10 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     
     - name: Set Up
-      run: gradle setupCIWorkspace
+      run: ./gradle setupCIWorkspace
 
     - name: Build with Gradle
-      run: gradle build
+      run: ./gradle build
     
     - name: List Files
       run: ls ./
