--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -26,6 +26,9 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
     
+    - name: Set Up Permissions
+      run: chmod -x 700 ./gradlew
+      
     - name: Set Up
       run: ./gradlew setupCIWorkspace
 
